feat: Telegram bot respond with status
Get all balances and return their status together with total.

Updater record the total.